# pixie

./: .gitignore  CMakeLists.txt
backend/: .env.example  CMakeLists.txt  CMakeSettings.json  package-lock.json  package.json  tsconfig.json
backend/migrations/: 002_f_set_updated_at.sql  018_t_login_sessions.sql  020_t_access_logs.sql  024_t_attachments.sql  028_t_clients.sql  032_t_referrals.sql  041_t_payer_rules.sql  046_t_transport_vehicles.sql  051_t_inbound_log.sql  052_t_outbound_log.sql  053_t_visit_flags.sql  055_t_invoices.sql  060_t_remittance_lines.sql  062_t_soft_delete_log.sql  063_t_api_request_log.sql
backend/src/: index.ts
backend_cpp/: CMakeLists.txt  TODO.md
backend_cpp/include/core/: app.h  pg_pool.h
backend_cpp/include/db/: connection.h
backend_cpp/include/dto/: validation.h
backend_cpp/include/error-handling/: error.h
backend_cpp/include/http/: response_helpers.h
backend_cpp/include/middleware/: request_logger.h
backend_cpp/include/routes/: dbtest.h  ping.h
backend_cpp/include/services/: client_service.h  diagnostic_service.h
backend_cpp/include/util/: env_loader.h
backend_cpp/include/validators/: client_validator.h  common_validation.h  validation_utils.h
backend_cpp/migrations/: 005_t_roles.sql  006_t_user_roles.sql  007_t_locations.sql  010_t_status_codes.sql  011_t_tag_registry.sql  013_t_timezones.sql  016_f_json_diff.sql  025_t_notes.sql  027_t_tags.sql  033_t_intake_assessments.sql  036_t_payers.sql  038_t_authorizations.sql  045_t_transport_schedule.sql  049_t_attendance_log.sql  056_t_claims.sql  065_t_record_locks.sql  067_t_form_versions.sql  068_t_workflow_triggers.sql  071_t_cron_log.sql
backend_cpp/src/: main.cpp
backend_cpp/src/core/: app.cpp  logger.cpp  pg_pool.cpp
backend_cpp/src/db/: connection.cpp
backend_cpp/src/dto/: validation.cpp
backend_cpp/src/error-handling/: error.cpp
backend_cpp/src/http/: response_helpers.cpp
backend_cpp/src/middleware/: request_logger.cpp
backend_cpp/src/routes/: clients.cpp  dbtest.cpp  ping.cpp
backend_cpp/src/services/: client_service.cpp
backend_cpp/src/util/: env_loader.cpp
backend_cpp/src/validators/: client_validator.cpp  common_validation.cpp  validation_utils.cpp
database/: .env.database.example  docker-compose.yaml
database/schema/: 003_t_organizations.sql  009_t_settings.sql  029_t_client_identifiers.sql  034_t_initial_nursing_eval.sql  037_t_insurance_provider_payers.sql  043_t_client_schedule.sql  048_t_routing_events.sql  050_t_attendance_status_log.sql  054_f_autofill_attendance.sql  059_t_remittances.sql  061_t_denials.sql  069_t_notifications.sql
database/scripts/: db-export.ps1  db-reset.ps1  env.example.ps1
db/schema/: 008_t_permissions.sql  015_t_holidays.sql  019_t_impersonation_events.sql  022_t_audit_log.sql  023_t_files.sql  026_t_signatures.sql  031_t_client_flags.sql  040_t_authorization_audit.sql  042_f_validate_authorization_lines.sql  047_t_transport_routes.sql  064_t_data_export_log.sql
scripts/: load.all.env.ps1  load.schema.ps1  setup.bat  setup_libs.bat
supabase/: config.toml  seed.sql
(+65 files in other folders)
